# functionality

./: .gitignore  .gitlab-ci.yml  Automated Test Environment Design for Complex Radar Systems.docx  PROJECT_HISTORY.md  README.md  bsr_apis_5.4.1_user_guide.html  git_version.py  hrr_apis_0.2.0_user_guide.html  lldp_ref_tests.py  pyproject.toml  requirements.txt
config/: credentials.yaml.example  hardware_config.example.yaml  hardware_config.yaml  test_benches.yaml  test_environment.example.yaml  thresholds.example.yaml
config/schemas/: hardware_config_schema.json  test_benches_schema.json  test_environment_schema.json  thresholds_schema.json
scripts/: __init__.py  ci_pipeline.py  run_tests.py
src/: __init__.py  test_cycle.py
src/actions/: __init__.py  base.py  lldp_actions.py  power_actions.py  psu_actions.py  ptp_actions.py  radar_actions.py
src/config/: __init__.py  loader.py  schema_registry.py  version_compat.py
src/drivers/: __init__.py  bsr_driver.py  driver_factory.py  fw_manager.py  hrr_driver.py  mock_driver.py  psu_driver.py  ptp_driver.py  radar_driver_base.py
src/jira_client/: __init__.py  result_reporter.py  test_mapper.py  xray_client.py
src/reporting/: __init__.py
src/resource_manager/: __init__.py  health_check.py  manager.py
tests/: __init__.py  conftest.py  test_actions.py  test_config.py  test_drivers.py  test_jira_client.py  test_resource_manager.py
tests/durability/: __init__.py
tests/functional/: __init__.py  test_lldp.py  test_psu_operations.py  test_ptp_sync.py  test_radar_basic.py
tests/integration/: __init__.py
(+1 files in other folders)
